crates/kul-wasm/tests/snapshots/export_graph__example_06_polygamous_household_cytoscape.snap
---
source: crates/kul-wasm/tests/export_graph.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "nodes": [
      {
        "data": {
          "id": "p:omar",
          "type": "person",
          "name": "Omar Al-Rashid",
          "gender": "male",
          "born": {
            "value": "1925",
            "precision": "year",
            "circa": true
          }
        }
      },
      {
        "data": {
          "id": "p:fatima",
          "type": "person",
          "name": "Fatima Al-Rashid",
          "gender": "female",
          "born": {
            "value": "1928-04-02",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:khalid",
          "type": "person",
          "name": "Khalid Al-Rashid",
          "gender": "male",
          "born": {
            "value": "1950-03-29",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:aisha",
          "type": "person",
          "name": "Aisha Al-Rashid",
          "gender": "female",
          "born": {
            "value": "1955-07-11",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:layla",
          "type": "person",
          "name": "Layla Al-Rashid",
          "gender": "female",
          "born": {
            "value": "1958-02-23",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:mariam",
          "type": "person",
          "name": "Mariam Al-Rashid",
          "gender": "female",
          "born": {
            "value": "1962-10-19",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:yusuf",
          "type": "person",
          "name": "Yusuf Al-Rashid",
          "gender": "male",
          "born": {
            "value": "1977-06-13",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:zahra",
          "type": "person",
          "name": "Zahra Al-Rashid",
          "gender": "female",
          "born": {
            "value": "1982-01-08",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:hassan",
          "type": "person",
          "name": "Hassan Al-Rashid",
          "gender": "male",
          "born": {
            "value": "1987-03-21",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:noor",
          "type": "person",
          "name": "Noor Al-Rashid",
          "gender": "female",
          "born": {
            "value": "1990-11-07",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_omar_fatima",
          "type": "marriage",
          "start": {
            "value": "1945-08-17",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_khalid_aisha",
          "type": "marriage",
          "start": {
            "value": "1975-05-04",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_khalid_layla",
          "type": "marriage",
          "start": {
            "value": "1980-09-16",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_khalid_mariam",
          "type": "marriage",
          "start": {
            "value": "1985-12-28",
            "precision": "day",
            "circa": false
          }
        }
      }
    ],
    "edges": [
      {
        "data": {
          "source": "m:m_omar_fatima",
          "target": "p:omar",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_omar_fatima",
          "target": "p:fatima",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_khalid_aisha",
          "target": "p:khalid",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_khalid_aisha",
          "target": "p:aisha",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_khalid_layla",
          "target": "p:khalid",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_khalid_layla",
          "target": "p:layla",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_khalid_mariam",
          "target": "p:khalid",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_khalid_mariam",
          "target": "p:mariam",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_omar_fatima",
          "target": "p:khalid",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_khalid_aisha",
          "target": "p:yusuf",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_khalid_layla",
          "target": "p:zahra",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_khalid_mariam",
          "target": "p:hassan",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_khalid_mariam",
          "target": "p:noor",
          "type": "biological_child"
        }
      }
    ]
  }
}
